manifest/objects/L2O_Covered_Entity_Product_Detail__c.object
<CustomObject>
    <fields>
        <fullName>L2O_Asset_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Id</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Covered Entity Product Details</relationshipLabel>
        <relationshipName>Covered_Entity_Product_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_CPQ_Contract_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPQ Contract Id</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Covered Entity Product Details</relationshipLabel>
        <relationshipName>Covered_Entity_Product_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Contract_Owner_Account_Id__c</fullName>
        <label>Contract Owner Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Covered Entity Product Details</relationshipLabel>
        <relationshipName>Covered_Entity_Product_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>L2O_Servicing_Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicing Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Covered Entity Product Details (Servicing Account Id)</relationshipLabel>
        <relationshipName>Covered_Entity_Product_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Subscription_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Id</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Covered Entity Product Details</relationshipLabel>
        <relationshipName>Covered_Entity_Product_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Subscription_Price__c</fullName>
        <formula>L2O_Subscription_Id__r.SBQQ__NetPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Subscription_Product_Name__c</fullName>
        <formula>L2O_Subscription_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Subscription_Quantity__c</fullName>
        <formula>L2O_Subscription_Id__r.SBQQ__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Covered Entity Product Detail</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Covered Entity Product Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Covered Entity Product Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>